examples/test/testpolicy12980.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12980
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key40: value44
      key8: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value44
          key27: value10
          key25: value0
      podSelector:
        matchLabels:
          key40: value16
          key41: value23
